--- a/SomeDay/pom.xml
+++ b/SomeDay/pom.xml
@@ -172,6 +172,13 @@
 			<version>4.0.4.RELEASE</version>
 		</dependency>
 
+		<!-- oracle jdbc -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
