--- a/SomeDay/.settings/org.eclipse.core.resources.prefs
+++ b/SomeDay/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/notice/NoticeList.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/tiles/body.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/tiles/header.jsp=UTF-8
